--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -2,6 +2,8 @@ branch-defaults:
   default:
     environment: null
     group_suffix: null
+  master:
+    environment: weco-dev
 global:
   application_name: WECO
   default_platform: Node.js
