--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "WE Collective",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.4.0",
     "body-parser": "^1.15.1",
     "express": "^4.13.4"
   }
