--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "express": "^4.13.4"
   },
   "devDependencies": {
-    "grunt": "^1.0.1"
+    "grunt": "^1.0.1",
+    "grunt-concurrent": "^2.3.0",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-exec": "^1.0.0",
+    "grunt-nodemon": "^0.4.2"
   }
 }
