--- a/package.json
+++ b/package.json
@@ -15,9 +15,16 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.4.0",
-    "body-parser": "^1.15.1",
+    "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.3.0",
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.13.4",
-    "helmet": "^2.1.1"
+    "express-session": "^1.13.0",
+    "helmet": "^2.1.1",
+    "node-gyp": "^3.3.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
