--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
+    "connect-dynamodb": "^1.0.7",
     "cookie-parser": "^1.4.3",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
