--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "helmet": "^2.1.1",
+    "lodash": "^4.13.1",
     "node-gyp": "^3.3.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
