--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "apidoc": "^0.16.1",
     "grunt": "^1.0.1",
+    "grunt-apidoc": "^0.11.0",
     "grunt-concurrent": "^2.3.0",
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
