--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "lodash": "^4.13.1",
     "node-gyp": "^3.3.1",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^1.4.8"
   },
   "devDependencies": {
     "apidoc": "^0.16.1",
