--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node-gyp": "^3.3.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "sendgrid": "^4.1.0",
     "socket.io": "^1.4.8"
   },
   "devDependencies": {
