--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "grunt-exec": "^1.0.0",
     "grunt-mocha-test": "^0.12.7",
     "grunt-nodemon": "^0.4.2",
+    "grunt-preprocess": "^5.1.0",
     "mocha": "^2.5.3",
     "should": "^9.0.2",
     "superagent": "^2.0.0",
