--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "apidoc": "^0.16.1",
+    "dotenv": "4.0.0",
     "grunt": "^1.0.1",
     "grunt-apidoc": "^0.11.0",
     "grunt-concurrent": "^2.3.0",
