--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "deploy:dev": "eb deploy api-dev --profile weco-iam",
     "deploy:production": "eb deploy api-prod --profile weco-iam",
+    "deploy:test": "eb deploy api-prod-test --profile weco-iam",
     "test": "mocha tests/test.js",
     "start": "node server.js"
   },
