--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cookie-parser": "^1.4.3",
     "dotenv": "4.0.0",
     "express": "^4.13.4",
+    "express-jwt": "^5.3.0",
     "express-session": "^1.13.0",
     "helmet": "^2.1.1",
     "lodash": "^4.13.1",
