--- a/package.json
+++ b/package.json
@@ -22,16 +22,16 @@
     "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
-    "connect-dynamodb": "^1.0.7",
     "cookie-parser": "^1.4.3",
     "dotenv": "4.0.0",
     "express": "^4.13.4",
-    "express-jwt": "^5.3.0",
-    "express-session": "^1.13.0",
+    "express-bearer-token": "^2.1.0",
     "helmet": "^2.1.1",
+    "jwt-simple": "^0.5.1",
     "lodash": "^4.13.1",
     "node-gyp": "^3.3.1",
     "passport": "^0.3.2",
+    "passport-jwt": "^3.0.0",
     "passport-local": "^1.0.0",
     "sendgrid": "^4.1.0",
     "socket.io": "^1.4.8"
