--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "algoliasearch": "^3.24.6",
+    "app-root-path": "^2.0.1",
     "aws-sdk": "^2.4.0",
     "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.3.0",
