--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "passport": "^0.3.2",
     "passport-jwt": "^3.0.0",
     "passport-local": "^1.0.0",
+    "pluralize": "^7.0.0",
     "sendgrid": "^4.1.0",
     "socket.io": "^1.4.8"
   },
