--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -11,5 +11,5 @@ global:
   application_name: WECO
   default_platform: Node.js
   default_region: eu-west-1
-  profile: weco
+  profile: weco-iam
   sc: null
