--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "dotenv": "4.0.0",
     "express": "^4.13.4",
     "express-bearer-token": "^2.1.0",
