--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "passport-jwt": "^3.0.0",
     "passport-local": "^1.0.0",
     "pluralize": "^7.0.0",
+    "raven": "^2.3.0",
     "sendgrid": "^4.1.0",
     "socket.io": "^1.4.8"
   },
