--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "pluralize": "^7.0.0",
     "raven": "^2.3.0",
     "sendgrid": "^4.1.0",
+    "slack-node": "^0.1.8",
     "socket.io": "^1.4.8"
   },
   "devDependencies": {
