--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "express": "^4.13.4",
     "express-bearer-token": "^2.1.0",
     "helmet": "^2.1.1",
-    "htmlparser": "^1.7.7",
+    "html-metadata": "^1.7.0",
     "jwt-simple": "^0.5.1",
     "lodash": "^4.13.1",
     "morgan": "^1.9.0",
