--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "WECOAPI",
+  "name": "api",
   "version": "1.0.0",
   "description": "The RESTful API for WECO.",
   "main": "server.js",
@@ -42,7 +42,6 @@
     "morgan": "^1.9.0",
     "node-gyp": "^3.3.1",
     "nodemon": "^1.14.10",
-    "npm-run-all": "^4.1.2",
     "passport": "^0.3.2",
     "passport-jwt": "^3.0.0",
     "passport-local": "^1.0.0",
@@ -56,6 +55,7 @@
     "eslint": "^4.11.0",
     "husky": "^0.14.3",
     "mocha": "^2.5.3",
+    "npm-run-all": "^4.1.5",
     "should": "^9.0.2",
     "superagent": "^2.0.0",
     "supertest": "^1.2.0",
