--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "deploy:dev": "eb deploy api-dev --profile weco-iam",
     "deploy:production": "eb deploy api-prod --profile weco-iam",
     "deploy:test": "eb deploy api-prod-test --profile weco-iam",
-    "lint": "eslint . .js --ignore-pattern node_modules/ --ignore-pattern docs/",
+    "lint": "eslint . --ext .js --ignore-pattern node_modules/ --ignore-pattern docs/",
     "precommit": "npm-run-all lint build-api",
     "start": "nodemon --watch",
-    "start-local": "cross-env NODE_ENV=local nodemon --watch",
-    "start:dev": "npm-run-all lint build-api start-local",
+    "start:dev": "npm-run-all lint build-api start:local",
+    "start:local": "cross-env NODE_ENV=local nodemon --watch",
     "test": "mocha tests/test.js"
   },
   "repository": {
@@ -32,14 +32,14 @@
     "cors": "^2.8.4",
     "cross-env": "^5.1.3",
     "dotenv": "4.0.0",
-    "express": "^4.13.4",
-    "express-bearer-token": "^2.1.0",
+    "express": "^4.16.4",
+    "express-bearer-token": "^2.2.0",
     "helmet": "^2.1.1",
     "html-metadata": "^1.7.0",
     "jwt-simple": "^0.5.1",
     "lodash": "^4.17.11",
     "morgan": "^1.9.0",
-    "node-gyp": "^3.3.1",
+    "node-gyp": "^3.8.0",
     "nodemon": "^1.18.10",
     "passport": "^0.3.2",
     "passport-jwt": "^3.0.0",
@@ -51,7 +51,7 @@
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
-    "eslint": "^4.11.0",
+    "eslint": "^5.14.0",
     "husky": "^0.14.3",
     "mocha": "^5.2.0",
     "npm-run-all": "^4.1.5",
