--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express-bearer-token": "^2.2.0",
     "helmet": "^2.1.1",
     "html-metadata": "^1.7.0",
+    "immutable": "^4.0.0-rc.12",
     "jwt-simple": "^0.5.1",
     "lodash": "^4.17.11",
     "morgan": "^1.9.0",
