--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "author": "WE Collective",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/contact-importer": "^6.2.1",
+    "@sendgrid/mail": "^6.3.1",
     "apidoc": "^0.17.6",
     "app-root-path": "^2.0.1",
     "aws-sdk": "^2.4.0",
