--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.2'
 services:
   localstack:
-    image: localstack/localstack:latest
+    image: localstack/localstack:0.9.6
     container_name: localstack_demo
     ports:
       - '4563-4584:4563-4584'
