--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "passport-local": "^1.0.0",
     "pluralize": "^7.0.0",
     "raven": "^2.3.0",
+    "shelljs": "^0.8.3",
     "slack-node": "^0.1.8",
     "socket.io": "^2.2.0"
   },
