--- a/package.json
+++ b/package.json
@@ -1,77 +1,77 @@
 {
-  "name": "api",
-  "version": "1.0.3",
-  "description": "The RESTful API for WECO.",
-  "main": "server.js",
-  "scripts": {
-    "build-api": "apidoc -e node_modules/ -o docs/ --private true",
-    "deploy:dev": "eb deploy api-dev --profile weco-iam",
-    "deploy:production": "eb deploy api-prod --profile weco-iam",
-    "deploy:test": "eb deploy api-prod-test --profile weco-iam",
-    "lint": "eslint . --ext .js --ignore-pattern node_modules/ --ignore-pattern docs/",
-    "precommit": "npm-run-all lint build-api",
-    "fix": "eslint . --ext .js --fix --ignore-pattern node_modules/ --ignore-pattern docs/",
-    "start": "nodemon --watch",
-    "start:dev": "npm-run-all lint build-api start:localnode",
-    "start:testlocalstack": "docker-compose up && cd lambda_stuff && node lambdas.js && cd..",
-    "start:localstack": "node dockersetup.js localstack_demo",
-    "start:localnode": "cross-env NODE_ENV=local nodemon --watch",
-    "stop:localstack": "stoplocalstack.exe",
-    "start:local": "npm-run-all start:localstack start:localnode",
-    "test": "mocha tests/test.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://MSChristensen@bitbucket.org/wecollective/wecoapi.git"
-  },
-  "author": "WE Collective",
-  "license": "ISC",
-  "dependencies": {
-    "@sendgrid/mail": "^6.3.1",
-    "apidoc": "^0.17.6",
-    "app-root-path": "^2.0.1",
-    "aws-sdk": "^2.4.0",
-    "bcrypt-nodejs": "0.0.3",
-    "bcryptjs": "^2.3.0",
-    "body-parser": "^1.15.2",
-    "cookie-parser": "^1.4.3",
-    "cors": "^2.8.4",
-    "cross-env": "^5.1.3",
-    "dotenv": "4.0.0",
-    "express": "^4.16.4",
-    "express-bearer-token": "^2.2.0",
-    "helmet": "^2.1.1",
-    "html-metadata": "^1.7.0",
-    "immutable": "^4.0.0-rc.12",
-    "jwt-simple": "^0.5.1",
-    "lodash": "^4.17.11",
-    "morgan": "^1.9.0",
-    "node-gyp": "^3.8.0",
-    "nodemon": "^1.18.10",
-    "passport": "^0.3.2",
-    "passport-jwt": "^3.0.0",
-    "passport-local": "^1.0.0",
-    "pluralize": "^7.0.0",
-    "raven": "^2.3.0",
-    "shelljs": "^0.8.3",
-    "slack-node": "^0.1.8",
-    "socket.io": "^2.2.0"
-  },
-  "devDependencies": {
-    "eslint": "^5.14.0",
-    "husky": "^0.14.3",
-    "mocha": "^5.2.0",
-    "npm-run-all": "^4.1.5",
-    "should": "^9.0.2",
-    "superagent": "^4.1.0",
-    "supertest": "^1.2.0",
-    "supertest-session": "^2.0.1"
-  },
-  "apidoc": {
-    "name": "WECO API",
-    "title": "WECO API Docs",
-    "description": "Documentation for the WE Collective RESTful API.",
-    "version": "1.0.0",
-    "url": ""
-  }
+    "name": "api",
+    "version": "1.0.3",
+    "description": "The RESTful API for WECO.",
+    "main": "server.js",
+    "scripts": {
+        "build-api": "apidoc -e node_modules/ -o docs/ --private true",
+        "deploy:dev": "eb deploy api-dev --profile weco-iam",
+        "deploy:production": "eb deploy Weco-api-prod --profile weco-iam",
+        "deploy:test": "eb deploy api-prod-test --profile weco-iam",
+        "lint": "eslint . --ext .js --ignore-pattern node_modules/ --ignore-pattern docs/",
+        "precommit": "npm-run-all lint build-api",
+        "fix": "eslint . --ext .js --fix --ignore-pattern node_modules/ --ignore-pattern docs/",
+        "start": "nodemon --watch",
+        "start:dev": "npm-run-all lint build-api start",
+        "start:testlocalstack": "docker-compose up && cd lambda_stuff && node lambdas.js && cd..",
+        "start:localstack": "node dockersetup.js localstack_demo",
+        "start:localnode": "cross-env NODE_ENV=local nodemon --watch",
+        "stop:localstack": "stoplocalstack.exe",
+        "start:local": "npm-run-all start:localstack start:localnode",
+        "test": "mocha tests/test.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://MSChristensen@bitbucket.org/wecollective/wecoapi.git"
+    },
+    "author": "WE Collective",
+    "license": "ISC",
+    "dependencies": {
+        "@sendgrid/mail": "^6.3.1",
+        "apidoc": "^0.17.6",
+        "app-root-path": "^2.0.1",
+        "aws-sdk": "^2.4.0",
+        "bcrypt-nodejs": "0.0.3",
+        "bcryptjs": "^2.3.0",
+        "body-parser": "^1.15.2",
+        "cookie-parser": "^1.4.3",
+        "cors": "^2.8.4",
+        "cross-env": "^5.1.3",
+        "dotenv": "4.0.0",
+        "express": "^4.16.4",
+        "express-bearer-token": "^2.2.0",
+        "helmet": "^2.1.1",
+        "html-metadata": "^1.7.0",
+        "immutable": "^4.0.0-rc.12",
+        "jwt-simple": "^0.5.1",
+        "lodash": "^4.17.11",
+        "morgan": "^1.9.0",
+        "node-gyp": "^3.8.0",
+        "nodemon": "^1.18.10",
+        "passport": "^0.3.2",
+        "passport-jwt": "^3.0.0",
+        "passport-local": "^1.0.0",
+        "pluralize": "^7.0.0",
+        "raven": "^2.3.0",
+        "shelljs": "^0.8.3",
+        "slack-node": "^0.1.8",
+        "socket.io": "^2.2.0"
+    },
+    "devDependencies": {
+        "eslint": "^5.14.0",
+        "husky": "^0.14.3",
+        "mocha": "^5.2.0",
+        "npm-run-all": "^4.1.5",
+        "should": "^9.0.2",
+        "superagent": "^4.1.0",
+        "supertest": "^1.2.0",
+        "supertest-session": "^2.0.1"
+    },
+    "apidoc": {
+        "name": "WECO API",
+        "title": "WECO API Docs",
+        "description": "Documentation for the WE Collective RESTful API.",
+        "version": "1.0.0",
+        "url": ""
+    }
 }
